[package]
name = "explorer"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "explorer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
rand = { version = "0.8.4", features = ["alloc"] }
rand_pcg = "0.3.1"
rustler = "0.25.0"
thiserror = "1"

# MiMalloc won´t compile on Windows with the GCC compiler.
# On Linux with Musl it won´t load correctly.
[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
mimalloc = { version = "*", default-features = false }

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
rev = "c21736453c3ee7f6a4a31f0aea080be9dbca4196"
default-features = false
features = [
  "cross_join",
  "cum_agg",
  "decompress",
  "dtype-date",
  "dtype-datetime",
  "ipc",
  "ipc_streaming",
  "json",
  "lazy",
  "parquet",
  "performant",
  "rolling_window",
  "rows",
  "simd",
  "sort_multiple",
  "temporal",
  "to_dummies",
]
